--- a/index.html
+++ b/index.html
@@ -4,49 +4,54 @@
 <meta charset="utf-8">
 <title>Introduction to HTML by Lana </title>
 <link href="assignment.css" rel="stylesheet" type="text/css">
-</head>
+	
 <style>
 
 #mydiv
 	{
 	background-color:#589618;
 		}
-	
-	
 span
 	{
 	color: #6B9551;
 	}
 	
-	</style>
+</style>
+	</head>
+	
+	
+	
 <body>
-	<header><h1>Introduction to HTML by Lana</h1></header>
+	
+<header><h1>Introduction to HTML by Lana</h1></header>
 	
 	<h2>Doctype</h2>
 	<h3>Description</h3>
 	<p>Doctype HTML is a declaration that tells the browser what version of HTML the document is written in.</p>
 	<h3>Example of code</h3>
-<p>&lt;!doctype html&gt;</p>
+	<p>&lt;!doctype html&gt;</p>
 	<h3>Working example</h3>
 	<p>Working example</p>
-	
+	<hr>
 <h2>html</h2>
 	<h3>Description</h3>
 	<p>HTML stands for Hyper Text Markup Language. HTML is the standard markup language for creating Web pages. HTML describes the structure of a Web page.</p>
 	<h3>Example of code</h3>
 	<p>&lt;html&gt;&lt;/html&gt;</p>
 	<h3>Working example</h3>
-	<p>&lt;html&gt;&lt;/html&gt;</p>
+	<p>In  css</p>
 	
-	
+		<hr>
+
 <h2>head</h2>
 	<h3>Description</h3>
-	<p>The head of an HTML document is the part that is not displayed in the web browser when the page is loaded</p>
+	<p>The head of an HTML document is the part that is not displayed in the web browser when the page is loaded. In the head you will find the style of the web page.</p>
 	<h3>Example of code</h3>
 	<p>&lt;head&gt;</p>
 	<h3>Working example</h3>
-	<p><head>This is the head, containing the body of text</head></p>
+	<p><head>This is the head containing the style, look in CSS.</head></p>
 	
+	<hr>
 	
 <h2>body</h2>
 	<h3>Description</h3>
@@ -55,18 +60,20 @@ span
 	<p>&lt;body&gt;&lt;/body&gt;</p>
 	<h3>Working example</h3>
 	<p>&lt;body&gt;
-		This is the body
+		This is the body, containing headings, paragraphs etc
 	&lt;/body&gt;</p>
-	
+		<hr>
+
 	
 <h2>title</h2>
 	<h3>Description</h3>
 	<p>The title HTML element defines the document's title that is shown in a browser's title bar or a page's tab.</p>
 	<h3>Example of code</h3>
-	<p>&lt;title&gt;</p>
+	<p>&lt;title&gt;&lt;/title&gt;</p>
 	<h3>Working example</h3>
 	<p>&lt;title&gt;Introduction to HTML by Lana &lt;/title&gt;</p>
-	
+		<hr>
+
 <h2>p</h2>
 	<h3>Description</h3>
 	<p>The p HTML element represents a paragraph</p>
@@ -74,7 +81,8 @@ span
 	<p>&lt;p&gt;&lt;/p&gt;</p>
 	<h3>Working example</h3>
 	<p>This is a paragraph</p>
-	
+		<hr>
+
 	
 <h2>span</h2>
 	<h3>Description</h3>
@@ -83,19 +91,21 @@ span
 	<p>&lt;span&gt;&lt;/span&gt;</p>
 	<h3>Working example</h3>
 	<p>My mother has <span>green</span> eyes.</p>
-	
+		<hr>
+
 	
 <h2>div</h2>
 	<h3>Description</h3>
 	<p>The div tag defines a division or a section in an HTML document.</p>
 	<h3>Example of code</h3>
-	<p>&lt;div&gt;&lt;/div&gt;</p>
+	<p>&lt;div id="mydiv"&gt;&lt;/div&gt;</p>
 	<h3>Working example</h3>
 	<p><div id="mydiv">
  	This is some text in the div.</div> 
 	</p>
 	
-	
+		<hr>
+
 <h2>h1</h2>
 	<h3>Description</h3>
 	<p>The H1 tag is an HTML heading that's most commonly used to mark up a web page title</p>
@@ -104,7 +114,8 @@ span
 	<h3>Working example</h3>
 	<p><h1>This is text in H1 sized heading.</h1></p>
 	
-	
+		<hr>
+
 <h2>h2</h2>
 	<h3>Description</h3>
 	<p>An H2 tag marks the first sub-heading after your document's main heading. It defines the second-level headings on your webpage.</p>
@@ -113,7 +124,8 @@ span
 	<h3>Working example</h3>
 	<p><h2>This is text in H2 sized heading.</h2></p>
 	
-	
+		<hr>
+
 <h2>h3</h2>
 	<h3>Description</h3>
 	<p>The H3 element defines a level-three heading.</p>
@@ -122,7 +134,8 @@ span
 	<h3>Working example</h3>
 	<p><h3>This is text in h3 sized heading.</h3></p>
 	
-	
+		<hr>
+
 <h2>h4</h2>
 	<h3>Description</h3>
 	<p>The HTML h4 tag represents a level 4 heading in an HTML document.</p>
@@ -130,7 +143,8 @@ span
 	<p>&lt;h4&gt;&lt;/h4&gt;</p>
 	<h3>Working example</h3>
 	<p><h4>This is text in H4 sized heading.</h4></p>
-	
+		<hr>
+
 	
 <h2>h5</h2>
 	<h3>Description</h3>
@@ -140,7 +154,8 @@ span
 	<h3>Working example</h3>
 	<p><h5>This is text in H5 sized heading.</h5></p>
 	
-	
+		<hr>
+
 <h2>h6</h2>
 	<h3>Description</h3>
 	<p>The HTML h6 tag defines the fifth level heading in the HTML document.</p>
@@ -149,7 +164,8 @@ span
 	<h3>Working example</h3>
 	<p><h6>This is text in H6 size heading</h6></p>
 	
-	
+		<hr>
+
 <h2>strong</h2>
 	<h3>Description</h3>
 	<p>The strong HTML element indicates that its contents have strong importance, seriousness, or urgency. Browsers typically render the contents in bold type.</p>
@@ -158,131 +174,144 @@ span
 	<h3>Working example</h3>
 	<p><strong>This is strong/bold text.</strong></p>
 	
-	
+		<hr>
+
 <h2>emphasis</h2>
 	<h3>Description</h3>
 	<p>The em tag is used to define emphasized text. The content inside is typically displayed in italic.
-</p>
-	<h3>Example of code</h3>
-	<p>&lt;em&gt;&lt;/em&gt;</p>
-<h3>Working example</h3>
-<p><em>This is emphasized text.</em></p>
+	</p>
+		<h3>Example of code</h3>
+		<p>&lt;em&gt;&lt;/em&gt;</p>
+	<h3>Working example</h3>
+	<p><em>This is emphasized text.</em></p>
+
+	<hr>
 
 <h2>Tables</h2>
-	<h3>Description</h3>
-<p>Tables are an organised way to present information</p>
-	<h3>Example of code</h3>
-<p>&lt;table&gt;&lt;tr&gt;&lt;th&gt;&lt;/th&gt;&lt;/tr&gt;&lt;/table&gt;</p>
-	<h3>Working example</h3>
-<p><table>
+		<h3>Description</h3>
+	<p>Tables are an organised way to present information</p>
+		<h3>Example of code</h3>
+	<p>&lt;table&gt;&lt;tr&gt;&lt;th&gt;&lt;/th&gt;&lt;/tr&gt;&lt;/table&gt;</p>
+		<h3>Working example</h3>
+	<p>
+	<table>
 
 		<tr>
 	
-		<td> Mary </td>
-		<td> Smith </td>
-		<td> 50 </td>
+		<td> Lana </td>
+		<td> Radanovic </td>
+		<td> 19/07/1990 </td>
 		
 		</tr>
 	</table></p>
+	<hr>
 
 
 <h2>Caption</h2>
 	<h3>Description</h3>
-<p>The caption tag defines a table caption.</p>
-	<h3>Example of code</h3>
-<p>&lt;caption&gt;&lt;/caption&gt;</p>
-	<h3>Working example</h3>
-<p><table>
-  <caption>My savings</caption>
-  <tr>
-    <th>Month</th>
-    <th>Savings</th>
-  </tr>
-  <tr>
-    <td>January</td>
-    <td>$100</td>
-  </tr>
-</table></p>
+		<p>The caption tag defines a table caption.</p>
+			<h3>Example of code</h3>
+		<p>&lt;caption&gt;&lt;/caption&gt;</p>
+			<h3>Working example</h3>
+		<p><table>
+		  <caption>My Course</caption>
+		  <tr>
+			<th>Course</th>
+			<th>Start Date</th>
+		  </tr>
+		  <tr>
+			<td>Web Design</td>
+			<td>01/02/2003</td>
+		  </tr>
+		</table></p>
 
+	<hr>
 
 <h2>Lists</h2>
 	<h3>Description</h3>
-<p>The li-list tag defines a list item. ol defines a numbered list and ul defines a bulleted list</p>
-	<h3>Example of code</h3>
-<p>&lt;li&gt;&lt;ol&gt;&lt;/ol&gt;&lt;/li&gt;<br>&lt;li&gt;&lt;ul&gt;&lt;/ul&gt;&lt;/li&gt;</p>
-	<h3>Working example</h3>
-<p><ol>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
-</ol>
+		<p>The li-list tag defines a list item. ol defines a numbered list and ul defines a bulleted list</p>
+			<h3>Example of code</h3>
+		<p>&lt;li&gt;&lt;ol&gt;&lt;/ol&gt;&lt;/li&gt;<br>&lt;li&gt;&lt;ul&gt;&lt;/ul&gt;&lt;/li&gt;</p>
+			<h3>Working example</h3>
+		<p><ol>
+		  <li>Coffee</li>
+		  <li>Tea</li>
+		  <li>Milk</li>
+		</ol>
 
-<ul>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
-</ul></p>
+		<ul>
+		  <li>Coffee</li>
+		  <li>Tea</li>
+		  <li>Milk</li>
+		</ul></p>
+	<hr>
 
 
 <h2>Images</h2>
-	<h3>Description</h3>
-<p>The img tag is used to embed an image in an HTML page.</p>
-<h3>Example of code</h3>
-	<p>&lt;img src="images/squirel.png"&gt;</p>
-	<h3>Working example</h3>
-<p><img src="images/squirel.png" alt-"Squirel" width="100" height="100"></p>
+		<h3>Description</h3>
+	<p>The img tag is used to embed an image in an HTML page.</p>
+	<h3>Example of code</h3>
+		<p>&lt;img src="images/squirel.png"&gt;</p>
+		<h3>Working example</h3>
+	<p><img src="images/squirel.png" alt-"Squirel" width="100" height="100"></p>
 
+	<hr>
 
 <h2>Alt</h2>
-	<h3>Description</h3>
-<p>The alt tag is used to give an image a title when its not being loaded</p>
-	<h3>Example of code</h3>
-<p>&lt;img src="images/squirel.png" alt="Squirel"&gt;&lt;&gt;</p>
-	<h3>Working example</h3>
-<p><img src="images/squirel.png" alt-"Squirel" width="100" height="100"></p>
+		<h3>Description</h3>
+	<p>The alt tag is used to give an image a title when its not being loaded</p>
+		<h3>Example of code</h3>
+	<p>&lt;img src="images/squirel.png" alt="Squirel"&gt;&lt;&gt;</p>
+		<h3>Working example</h3>
+	<p><img src="images/squirel.png" alt-"Squirel" width="100" height="100"></p>
+	<hr>
 
 
 <h2>Links</h2>
-	<h3>Description</h3>
-	<p>A link is a tag used to insert a an existing webpage into an index page of a website being created</p>
-	<h3>Example of code</h3>
-<p>&lt;a href = "http://www.rte.ie/"&gt; RTE&lt;/a&gt;</p>
-	<h3>Working example</h3>
-	<p><a href = "http://www.rte.ie/"> RTE </a></p>
+		<h3>Description</h3>
+		<p>A link is a tag used to insert a an existing webpage into an index page of a website being created</p>
+		<h3>Example of code</h3>
+	<p>&lt;a href = "http://www.rte.ie/"&gt; RTE&lt;/a&gt;</p>
+		<h3>Working example</h3>
+		<p><a href = "http://www.rte.ie/"> RTE </a></p>
 
+	<hr>
 
 <h2>quote</h2>
-	<h3>Description</h3>
-	<p>The q tag defines a short quotation.</p>
-	<h3>Example of code</h3>
-<p>&lt;q&gt;&lt;/q&gt;</p>
-	<h3>Working example</h3>
-	<p><p>WWF's goal is to:
-<q>Build a future where people live in harmony with nature.</q>
-We hope they succeed.</p></p>
+		<h3>Description</h3>
+		<p>The q tag defines a short quotation.</p>
+		<h3>Example of code</h3>
+	<p>&lt;q&gt;&lt;/q&gt;</p>
+		<h3>Working example</h3>
+		<p>WWF's goal is to:
+	<q>Build a future where people live in harmony with nature.</q>
+	We hope they succeed.</p>
 
+	<hr>
 
 
 <h2>blockquote</h2>
-	<h3>Description</h3>
-	<p>The blockquote tag specifies a section that is quoted from another source. It wil appear indented.</p>
-	<h3>Example of code</h3>
-<p>&lt;blockquote&gt;&lt;/blockquote&gt;</p>
-	<h3>Working example</h3>
-	<p><blockquote>
-This paragraph will appear indented in Internet Explorer as it is enclosed in blockquotes. Any spaces tabs	or 	line breaks 
-will be ignored. </blockquote></p>
+		<h3>Description</h3>
+		<p>The blockquote tag specifies a section that is quoted from another source. It wil appear indented.</p>
+		<h3>Example of code</h3>
+	<p>&lt;blockquote&gt;&lt;/blockquote&gt;</p>
+		<h3>Working example</h3>
+		<p><blockquote>
+	This paragraph will appear indented in Internet Explorer as it is enclosed in blockquotes. Any spaces tabs	or 	line breaks 
+	will be ignored. </blockquote></p>
 
 
+	<hr>
 
 <h2>abbreviations</h2>
 	<h3>Description</h3>
 	<p>Abbreviation code is used when a title wants to be shortened but when hovered over the long title appears</p>
 	<h3>Example of code</h3>
-<p>&lt;abbr title = "Vocational Training and Opportunities Scheme"&gt;VTOS&lt;/abbr&gt;</p>
+	<p>&lt;abbr title = "Vocational Training and Opportunities Scheme"&gt;VTOS&lt;/abbr&gt;</p>
 	<h3>Working example</h3>
 	<p><abbr title = "Vocational Training and Opportunities Scheme">VTOS</abbr></p>
 
+	<hr>
 
 
 <h2>meta</h2>
@@ -296,6 +325,7 @@ will be ignored. </blockquote></p>
   </p>
 
 
+	<hr>
 
 <h2>forms</h2>
 	<h3>Description</h3>
@@ -314,6 +344,7 @@ will be ignored. </blockquote></p>
   <input type="submit" value="Submit">
 </form></p>
 
+	<hr>
 
 
 <h2>Special Symbols and Character Entities</h2>
@@ -331,8 +362,11 @@ will be ignored. </blockquote></p>
 		<p>&lt; Less than</p>
 		<p>&gt; Greater than</p></p>
 
+	<hr>
 
 
-<h2><a href="css_assignment.html">CSS</a></h2>
+<h2><a href="CSS.html">CSS</a></h2>
+	<hr>
+
 </body>
 </html>
