--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ span
 <body>
 	
 <header><h1>Introduction to HTML by Lana</h1></header>
+	<hr>
 	
 	<h2>Doctype</h2>
 	<h3>Description</h3>
@@ -253,7 +254,7 @@ span
 	<h3>Example of code</h3>
 		<p>&lt;img src="images/squirel.png"&gt;</p>
 		<h3>Working example</h3>
-	<p><img src="images/squirel.png" alt-"Squirel" width="100" height="100"></p>
+	<p><img src="images/squirel.png" alt="Squirel" width="100" height="100"></p>
 
 	<hr>
 
@@ -261,9 +262,9 @@ span
 		<h3>Description</h3>
 	<p>The alt tag is used to give an image a title when its not being loaded</p>
 		<h3>Example of code</h3>
-	<p>&lt;img src="images/squirel.png" alt="Squirel"&gt;&lt;&gt;</p>
+	<p>&lt;img src="images/squirel.png" alt="Squirel"&gt;</p>
 		<h3>Working example</h3>
-	<p><img src="images/squirel.png" alt-"Squirel" width="100" height="100"></p>
+	<p><img src="images/squrel.png" alt="Squirel" width="100" height="100"></p>
 	<hr>
 
 
