--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 #mydiv
 	{
 	background-color:#589618;
-		}
+		width: 200px;
+	}
 span
 	{
 	color: #6B9551;
 	}
 	
 </style>
-	</head>
+</head>
 	
 	
 	
