--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@ span
 	color: #6B9551;
 	}
 	
+table,th,td	
+	{
+	border:2px solid black;
+	border-color:navy;
+	border-collapse:collapse;
+	}
+
+caption
+		{
+	border:2px solid black;
+	border-color:navy;
+	border-collapse:collapse;
+	}
+	
 </style>
 </head>
 	
@@ -28,6 +42,7 @@ span
 	<hr>
 	
 	<h2>Doctype</h2>
+	<hr>
 	<h3>Description</h3>
 	<p>Doctype HTML is a declaration that tells the browser what version of HTML the document is written in.</p>
 	<h3>Example of code</h3>
@@ -35,7 +50,9 @@ span
 	<h3>Working example</h3>
 	<p>Working example</p>
 	<hr>
+	
 <h2>html</h2>
+	<hr>
 	<h3>Description</h3>
 	<p>HTML stands for Hyper Text Markup Language. HTML is the standard markup language for creating Web pages. HTML describes the structure of a Web page.</p>
 	<h3>Example of code</h3>
@@ -46,6 +63,7 @@ span
 		<hr>
 
 <h2>head</h2>
+	<hr>
 	<h3>Description</h3>
 	<p>The head of an HTML document is the part that is not displayed in the web browser when the page is loaded. In the head you will find the style of the web page.</p>
 	<h3>Example of code</h3>
@@ -56,6 +74,7 @@ span
 	<hr>
 	
 <h2>body</h2>
+	<hr>
 	<h3>Description</h3>
 	<p>The body element contains all the contents of an HTML document, such as headings, paragraphs, images, hyperlinks, tables, lists, etc.</p>
 	<h3>Example of code</h3>
@@ -68,6 +87,7 @@ span
 
 	
 <h2>title</h2>
+	<hr>
 	<h3>Description</h3>
 	<p>The title HTML element defines the document's title that is shown in a browser's title bar or a page's tab.</p>
 	<h3>Example of code</h3>
@@ -77,6 +97,7 @@ span
 		<hr>
 
 <h2>p</h2>
+	<hr>
 	<h3>Description</h3>
 	<p>The p HTML element represents a paragraph</p>
 	<h3>Example of code</h3>
@@ -87,6 +108,7 @@ span
 
 	
 <h2>span</h2>
+	<hr>
 	<h3>Description</h3>
 	<p>In HTML, the span tag is a generic inline container element. Span tags usually wrap sections of text for styling purposes or for adding attributes to a section of text without creating a new line of content.</p>
 	<h3>Example of code</h3>
@@ -97,6 +119,7 @@ span
 
 	
 <h2>div</h2>
+	<hr>
 	<h3>Description</h3>
 	<p>The div tag defines a division or a section in an HTML document.</p>
 	<h3>Example of code</h3>
@@ -109,6 +132,7 @@ span
 		<hr>
 
 <h2>h1</h2>
+	<hr>
 	<h3>Description</h3>
 	<p>The H1 tag is an HTML heading that's most commonly used to mark up a web page title</p>
 	<h3>Example of code</h3>
@@ -119,6 +143,7 @@ span
 		<hr>
 
 <h2>h2</h2>
+<hr>
 	<h3>Description</h3>
 	<p>An H2 tag marks the first sub-heading after your document's main heading. It defines the second-level headings on your webpage.</p>
 	<h3>Example of code</h3>
@@ -129,6 +154,7 @@ span
 		<hr>
 
 <h2>h3</h2>
+<hr>
 	<h3>Description</h3>
 	<p>The H3 element defines a level-three heading.</p>
 	<h3>Example of code</h3>
@@ -139,6 +165,7 @@ span
 		<hr>
 
 <h2>h4</h2>
+<hr>
 	<h3>Description</h3>
 	<p>The HTML h4 tag represents a level 4 heading in an HTML document.</p>
 	<h3>Example of code</h3>
@@ -149,6 +176,7 @@ span
 
 	
 <h2>h5</h2>
+<hr>
 	<h3>Description</h3>
 	<p>The HTML h5 tag defines the fifth level heading in the HTML document.</p>
 	<h3>Example of code</h3>
@@ -159,6 +187,7 @@ span
 		<hr>
 
 <h2>h6</h2>
+<hr>
 	<h3>Description</h3>
 	<p>The HTML h6 tag defines the fifth level heading in the HTML document.</p>
 	<h3>Example of code</h3>
@@ -169,6 +198,7 @@ span
 		<hr>
 
 <h2>strong</h2>
+<hr>
 	<h3>Description</h3>
 	<p>The strong HTML element indicates that its contents have strong importance, seriousness, or urgency. Browsers typically render the contents in bold type.</p>
 	<h3>Example of code</h3>
@@ -179,6 +209,7 @@ span
 		<hr>
 
 <h2>emphasis</h2>
+<hr>
 	<h3>Description</h3>
 	<p>The em tag is used to define emphasized text. The content inside is typically displayed in italic.
 	</p>
@@ -190,6 +221,7 @@ span
 	<hr>
 
 <h2>Tables</h2>
+<hr>
 		<h3>Description</h3>
 	<p>Tables are an organised way to present information</p>
 		<h3>Example of code</h3>
@@ -210,6 +242,7 @@ span
 
 
 <h2>Caption</h2>
+<hr>
 	<h3>Description</h3>
 		<p>The caption tag defines a table caption.</p>
 			<h3>Example of code</h3>
@@ -230,6 +263,7 @@ span
 	<hr>
 
 <h2>Lists</h2>
+<hr>
 	<h3>Description</h3>
 		<p>The li-list tag defines a list item. ol defines a numbered list and ul defines a bulleted list</p>
 			<h3>Example of code</h3>
@@ -250,6 +284,7 @@ span
 
 
 <h2>Images</h2>
+<hr>
 		<h3>Description</h3>
 	<p>The img tag is used to embed an image in an HTML page.</p>
 	<h3>Example of code</h3>
@@ -260,6 +295,7 @@ span
 	<hr>
 
 <h2>Alt</h2>
+<hr>
 		<h3>Description</h3>
 	<p>The alt tag is used to give an image a title when its not being loaded</p>
 		<h3>Example of code</h3>
@@ -270,6 +306,7 @@ span
 
 
 <h2>Links</h2>
+<hr>
 		<h3>Description</h3>
 		<p>A link is a tag used to insert a an existing webpage into an index page of a website being created</p>
 		<h3>Example of code</h3>
@@ -280,6 +317,7 @@ span
 	<hr>
 
 <h2>quote</h2>
+<hr>
 		<h3>Description</h3>
 		<p>The q tag defines a short quotation.</p>
 		<h3>Example of code</h3>
@@ -293,6 +331,7 @@ span
 
 
 <h2>blockquote</h2>
+<hr>
 		<h3>Description</h3>
 		<p>The blockquote tag specifies a section that is quoted from another source. It wil appear indented.</p>
 		<h3>Example of code</h3>
@@ -306,6 +345,7 @@ span
 	<hr>
 
 <h2>abbreviations</h2>
+<hr>
 	<h3>Description</h3>
 	<p>Abbreviation code is used when a title wants to be shortened but when hovered over the long title appears</p>
 	<h3>Example of code</h3>
@@ -317,6 +357,7 @@ span
 
 
 <h2>meta</h2>
+<hr>
 	<h3>Description</h3>
 	<p>The meta tag defines metadata about an HTML document. Metadata is data (information) about data.</p>
 	<h3>Example of code</h3>
@@ -330,6 +371,7 @@ span
 	<hr>
 
 <h2>forms</h2>
+<hr>
 	<h3>Description</h3>
 	<p>The form tag is used to create an HTML form for user input.</p>
 	<h3>Example of code</h3>
@@ -350,6 +392,7 @@ span
 
 
 <h2>Special Symbols and Character Entities</h2>
+<hr>
 	<h3>Description</h3>
 	<p>Character entities are used to display reserved characters in HTML.</p>
 	<h3>Example of code</h3>
