--- a/CSS.html
+++ b/CSS.html
@@ -23,6 +23,9 @@ header{
 	text-align: center;
 	border: solid;
 	border-width: medium;;
+	border: medium solid #000000;
+		border-top-left-radius: 25px;
+		border-top-right-radius: 25px;
 	border-color: black;
 	height:200px;
 	text-transform: uppercase;
@@ -85,9 +88,7 @@ footer{
 h1 {
 		color: #121212;
 		text-align: center;
-		border: medium solid #000000;
-		border-top-left-radius: 25px;
-		border-top-right-radius: 25px;	
+			
 		font-size: 50px;
 		}
 	
@@ -205,7 +206,7 @@ li {
 		
 	<aside><h2>[Aside]</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis voluptatem ipsum molestias quasi repellat reiciendis velit voluptas cumque at optio assumenda laudantium necessitatibus voluptatibus non, facilis ratione nisi ullam harum.</p>
-	
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis voluptatem ipsum molestias quasi repellat reiciendis velit voluptas cumque at optio assumenda laudantium necessitatibus voluptatibus non, facilis ratione nisi ullam harum.</p>
 	  </aside>
 	<footer><h2>[The Footer &copy; Lana 2023]</h2>
 		<p></p>
