--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@ caption
 	<h3>Description</h3>
 	<p>Doctype HTML is a declaration that tells the browser what version of HTML the document is written in.</p>
 	<h3>Example of code</h3>
-	<p>&lt;!doctype html&gt;</p>
-	<h3>Working example</h3>
-	<p>Working example</p>
+	<p>&lt;!doctype html&gt;	</p>
 	<hr>
 	
 <h2>html</h2>
@@ -57,20 +55,14 @@ caption
 	<p>HTML stands for Hyper Text Markup Language. HTML is the standard markup language for creating Web pages. HTML describes the structure of a Web page.</p>
 	<h3>Example of code</h3>
 	<p>&lt;html&gt;&lt;/html&gt;</p>
-	<h3>Working example</h3>
-	<p>In  css</p>
-	
-		<hr>
+	<hr>
 
 <h2>head</h2>
 	<hr>
 	<h3>Description</h3>
 	<p>The head of an HTML document is the part that is not displayed in the web browser when the page is loaded. In the head you will find the style of the web page.</p>
 	<h3>Example of code</h3>
-	<p>&lt;head&gt;</p>
-	<h3>Working example</h3>
-	<p><head>This is the head containing the style, look in CSS.</head></p>
-	
+	<p>&lt;head&gt;	&lt;/head&gt;</p>
 	<hr>
 	
 <h2>body</h2>
@@ -78,12 +70,8 @@ caption
 	<h3>Description</h3>
 	<p>The body element contains all the contents of an HTML document, such as headings, paragraphs, images, hyperlinks, tables, lists, etc.</p>
 	<h3>Example of code</h3>
-	<p>&lt;body&gt;&lt;/body&gt;</p>
-	<h3>Working example</h3>
-	<p>&lt;body&gt;
-		This is the body, containing headings, paragraphs etc
-	&lt;/body&gt;</p>
-		<hr>
+	<p>&lt;body&gt;&lt;/body&gt;		</p>
+	<hr>
 
 	
 <h2>title</h2>
@@ -361,14 +349,8 @@ caption
 	<h3>Description</h3>
 	<p>The meta tag defines metadata about an HTML document. Metadata is data (information) about data.</p>
 	<h3>Example of code</h3>
-<p>&lt;meta name="description" content="CSS Assignment"&gt;</p>
-	<h3>Working example</h3>
-	<p> Working example is source code <meta charset="UTF-8">
-  <meta name="description" content="Free Web tutorials">
-  </p>
-
-
-	<hr>
+<p>&lt;meta charset=&quot;utf-8&quot;&gt;</p>
+<hr>
 
 <h2>forms</h2>
 <hr>
