--- a/index.html
+++ b/index.html
@@ -208,6 +208,20 @@ caption
 
 	<hr>
 
+<h2>Definition List</h2>
+<hr>
+	<h3>Description</h3>
+	<p>Definition List tag defines a description list.</p>
+	<h3>Example of Code</h3>
+	<p> &lt;dl&gt;
+	&lt;dt&gt;&lt;/dt&gt;&lt;dd&gt;&lt;/dd&gt;&lt;/dl&gt;</p>
+	<h3>Working Example</h3>
+	<p><dl>
+	  <dt>Coffee</dt>
+	  <dd>Black hot drink</dd>
+	  <dt>Milk</dt>
+	  <dd>White cold drink</dd>
+	</dl></p>
 <h2>Tables</h2>
 <hr>
 		<h3>Description</h3>
