--- a/CSS.html
+++ b/CSS.html
@@ -11,12 +11,11 @@ body
 	color:#121212;}
 	
 #wrapper{
-	width:1500px;
+	width: 1500px;
 	background-color: #c5c5c5;
-	margin:auto;
+	margin: auto;
 	border: solid;
-	border-top-left-radius: 10px;
-	border-top-right-radius: 10px;
+	border-radius: 28px;
 	}
 	
 header{
@@ -24,9 +23,9 @@ header{
 	border: solid;
 	border-width: medium;;
 	border: medium solid #000000;
-		border-top-left-radius: 25px;
-		border-top-right-radius: 25px;
-	border-color: black;
+	border-top-left-radius: 25px;
+	border-top-right-radius: 25px;
+	border-color: #000000;
 	height:200px;
 	text-transform: uppercase;
 	padding-top: 50px;
@@ -35,9 +34,9 @@ header{
 nav {
 	height: 120px;
 	background-color:#ddbbbb;
-	border: inset;
+	border: solid;
 	border-width: medium;;
-	border-color: black;
+	border-color: #000000;
 	}
 	
  main {
@@ -45,14 +44,15 @@ nav {
 		width:60%;
 		margin-right: auto;
 		margin-left:auto;
-		border:thin;
+		border: thin;
 		border-style: solid;
 		border-color: #463F3F;
 		padding-top: 2px;
 		padding-right: 2px;
 		padding-bottom:0px;
 		padding-left:2px;
-	 	float: left;
+	 	margin-left: 0px;
+	    margin-right: 0px;
 	 
 		}
 	
@@ -64,14 +64,14 @@ section {
 	
 aside{	
 		background-color:#ddbbbb;
-		border: inset;
+		border: solid;
 		border-width: medium;;
-		border-color: black;
+		border-color: #000000;
 		right: 0px;
+		margin-top: -408px;
 		float: right;
-		width: 589px;
-		height: 202px;
-	}
+		width: 590px;
+}
 
 footer{
 		clear: both;
@@ -82,26 +82,24 @@ footer{
 		background-image: url("images/footer.png");
 		background-repeat: no-repeat;
 		background-position: bottom right ;
-		background-attachment:fixed;
 		}
 
 h1 {
 		color: #121212;
-		text-align: center;
-			
+		text-align: center;	
 		font-size: 50px;
 		}
 	
 h2 {
-	color:#121212;
+		color:#121212;
 		
 		}
 	
 h3 {
 		font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", Verdana, "sans-serif";
 		text-align: center;
-		
 		}
+	
 .stand-out-style{
 		font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
 		background-color: #2f2f2f;
@@ -109,9 +107,9 @@ h3 {
 		margin-left: 30px;
 		padding: 5px;
 		font-weight: lighter;
-		font-style: italic;
-    
+		font-style: italic; 
 }
+	
 	
 a:link {
 		text-decoration:none;
@@ -128,7 +126,7 @@ a:link {
 a:visited
 	{
 		color:#9C6A6B;
-		background-color:lightgray;
+		background-color:#989292;
 		text-decoration:underline;
 	}
 	
@@ -146,24 +144,23 @@ a:active
 		text-decoration:underline;
 
 	}
-	
-ul  {
-		background-color: #ddbbbb;
-		height: 120px;
-		list-style-type: none;
-		margin:0;
-		padding:0;
-		overflow:hidden;
-	}
-	
-li {
-		display:inline;
-		float:left;
+.nav {	display: inline;
 		text-transform: uppercase;
-	 	font-size: 20px;
-		}
+		margin-left: 10px;
+		font-size: 25px;
+	}	
+	
+ul {
+	list-style-image: url("images/bullet.png");
+	margin-left: 100px;
+	background-color: #ddbbbb;
+	width:200px;
+	text-align: center;
+}	
+	
 
 
+	
 </style>
 </head>
 
@@ -174,31 +171,44 @@ li {
 </header>
 		
 		
-<nav><h2>[The Nav]</h2>
-		
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="#">html</a></li>
-    <li><a href="#">meta</a></li>
-    <li><a href="#">title</a></li>
+<nav>
+	<h2>[The Nav]</h2>
+	
+  <div class="nav">
+   <a href="index.html">Home</a>
+   <a href="#">html</a>
+   <a href="#">meta</a>
+   <a href="#">title</a>
     
-  </ul>
-
+	</div>
 		
 </nav>
 		
 		
-<main><h2>[Main]</h2>
+<main>
+	
+	<h2>[Main]</h2>
 		
 		
     <section>
   <h3>This is my H3 tag style.</h3>
 		</section>
 	
-      <section>
+     <section>
         <p class="stand-out-style">
         Stand-out-style applied in this paragraph. Stand out syle applied here. Stand out style applied here.</p>
      </section>
+	
+
+	<section class="list">
+	<ul>
+	  <li >List Item One</li>
+	  <li >List Item Two</li>
+	  <li >List Item Three</li>
+	  <li >List Item Four</li>
+    </ul>
+		
+	</section>
 	
 	
 		
